--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
-    <div class="card">
+
+    <main>
         <img src="./images/image-qr-code.png" alt="qr-code">
         <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    </main>
 
 </body>
 </html>
